style.css
/* ... */
    body {
        margin: 0;
        padding: 0;
        font-family: sans-serif;
        min-height: 100vh;
        font-family: "Montserrat", -apple-system, "system-ui", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
        overflow-x: hidden;
        position: relative;
        background-color: #ffffff;
        background-image: url("https://www.transparenttextures.com/patterns/pinstripe-dark.png");
    }


    .blue-circle {
        position: absolute;
        top: -8vw;
        right: -6vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(200px);
        background: var(--rcn-primary);
        overflow: hidden;
        z-index: -1;
    }

    .blue-circle-br {
        position: absolute;
        top: 30vw;
        left: -18vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(250px);
        background: var(--rcn-primary);
        overflow: hidden;
        z-index: -1;
    }

    .gold-circle-top-left {
        position: absolute;
        top: 6vw;
        right: 39vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(150px);
        background: #ffd70082;
        overflow: hidden;
        z-index: -1;
    }

    .gold-circle-tr-check {
        position: absolute;
        top: -50px;
        right: 350px;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(150px);
        background: #ffd70082;
        overflow: hidden;
        z-index: -1;
    }


    .gold-circle-tr-form {
        position: absolute;
        top: 0px;
        right: 25%;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(250px);
        background: #ffd70082;
        overflow: hidden;
        z-index: -1;
    }

    .blue-circle-bl-form {
        position: absolute;
        bottom: 10vw;
        left: 40vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(250px);
        background: var(--rcn-primary);
        overflow: hidden;
        z-index: -1;
    }

    .blue-circle-br-check {
        position: absolute;
        top: -10vw;
        right: -59vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(350px);
        background: var(--rcn-primary);
        overflow: hidden;
        z-index: -1;
    }


    .blue-circle-bl-check {
        position: absolute;
        top: 15vw;
        left: -30vw;
        width: 20vw;
        height: 20vw;
        border-radius: 50%;
        filter: blur(350px);
        background: var(--rcn-primary);
        overflow: hidden;
        z-index: -1;
    }



    a {
        text-decoration: none;
        color: inherit;
    }

    footer li>a:hover {
        text-decoration: underline;
    }

    .footer-content svg {
        max-width: 25px;
    }


    .rcn-btn-primary {
        background-color: var(--rcn-primary);
        color: #fff;
        padding: 0.5rem 1rem;
        border: 2px solid transparent;
        border-radius: var(--rcn-btn-border-radius);
        transition: all 0.3s ease-in-out;
        cursor: pointer;
        margin-bottom: 15px;
    }

    .rcn-btn-secondary {
        background-color: var(--rcn-tertiary);
        color: var(--rcn-secondary);
        padding: 1rem 4rem;
        border: 2px solid var(--rcn-primary);
        border-radius: 15px;
        transition: all 0.3s ease-in-out;
        cursor: pointer;
        font-weight: 600;
    }

    .rcn-btn-ghost {
        background-color: white;
        color: var(--rcn-primary);
        padding: 0.5rem 1rem;
        border: 2px solid var(--rcn-primary);
        border-radius: var(--rcn-btn-border-radius);
        transition: all 0.3s ease-in-out;
        cursor: pointer;
    }

    .rcn-btn-ghost:hover {
        background-color: var(--rcn-primary);
        color: #fff;
        border: 2px solid var(--rcn-primary);
    }

    .btn-big {
        padding: 1rem 3rem;
        font-size: 1rem;
        min-width: 220px;
    }



    .rcn-btn-primary:hover {
        background-color: #fff;
        color: var(--rcn-primary);
        border: 2px solid var(--rcn-primary);
    }

    .rcn-btn-secondary:hover {
        background-color: var(--rcn-secondary);
        color: var(--rcn-primary);
        border: 2px solid transparent;
    }

    .container {
        max-width: 1250px;
        margin-inline: auto;
    }


    .header-container {
        max-width: 1550px;
        margin-inline: auto;
    }

    .hero-container {
        max-width: 1550px;
        margin-inline: auto;
    }




    .formstack-container {
        margin-inline: auto;
        max-width: 1100px;
    }

    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 2rem;
        padding-inline: 1rem;
        background-color: rgba(255, 255, 255, 0.2);
        backdrop-filter: blur(5px);
        position: sticky;
        top: 0;
        border-radius: 0px 0px 10px 10px;
        z-index: 10;
    }

    header img {
        width: 180px;
        height: auto;
    }

    header ul li:hover {
        color: var(--rcn-primary);
        border-bottom: 2px solid var(--rcn-primary);
    }

    header ul li.rcn-btn-primary {
        background-color: var(--rcn-primary);
        color: #fff;
        padding: 0.5rem 1rem;
        border: 2px solid transparent;
        border-radius: var(--rcn-btn-border-radius);
        transition: all 0.3s ease-in-out;
        margin-block: 0px
    }

    header ul li.rcn-btn-primary:hover {
        background-color: #fff;
        color: var(--rcn-primary);
        border: 2px solid var(--rcn-primary);
    }


    header ul {
        display: flex;
        align-items: center;
        list-style: none;
        gap: 2rem;
    }
/* ... */

